[gd_scene load_steps=4 format=3 uid="uid://1by5sq3ofxw4"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_jpr3k"]
[ext_resource type="FontFile" uid="uid://do0yinjedn8al" path="res://fonts/DotGothic16-Regular.ttf" id="2_b17ub"]
[ext_resource type="AudioStream" uid="uid://bgma8pwj1qjek" path="res://audio/lose.wav" id="3_4eofg"]

[node name="WumpusGameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jpr3k")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b17ub")
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="TitleButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b17ub")
theme_override_font_sizes/font_size = 32
text = "Title Screen"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b17ub")
theme_override_font_sizes/font_size = 32
text = "Quit
"

[node name="GameOverLabel" type="Label" parent="MarginContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_b17ub")
theme_override_font_sizes/font_size = 64
text = "Death message"
autowrap_mode = 3

[node name="Lose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4eofg")
bus = &"SFX"

[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TitleButton" to="." method="_on_title_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
